--- a/_includes/_news.html
+++ b/_includes/_news.html
@@ -1,28 +1,25 @@
-<!--Latest News-->
+<!--
 <section class="latest-news">
   <div class="auto-container">
 	  <div class="outer-box">
 
-		<!--Left Image-->
 		<div class="left-image wow bounceInUp" data-wow-delay="0ms" data-wow-duration="1500ms"><img src="images/resource/man-image-1.png" alt=""></div>
 
-		<!--Section Title-->
 		<div class="sec-title text-left">
 		    <h2>Latest <span class="theme_color">News</span></h2>
 		    <div class="text">Claritas est etiam processus dynamicus, qui sequitur <br>mutationem consuetudium lectorum.</div>
 		</div>
 
 		<div class="row clearfix">
-		  <!-- Post Item-->
 		    <div class="post-item col-md-6 col-sm-6 col-xs-12">
 			  <div class="inner-box clearfix">
 				<figure class="post-thumb">
 				    <img src="images/resource/post-thumb-1.jpg" alt="">
-				    <!--Curve Box-->
+
 				    <div class="curve-box">
 					  <div class="left-curve"></div>
 					  <div class="right-curve"></div>
-				    </div><!--Curve Box-->
+				    </div>
 				</figure>
 				<div class="text-content">
 				  <h4><a href="#">Claritas est etiam processus dynamicus</a></h4>
@@ -31,16 +28,15 @@
 			  </div>
 		    </div>
 
-		    <!-- Post Item-->
 		    <div class="post-item col-md-6 col-sm-6 col-xs-12">
 			  <div class="inner-box clearfix">
 				<figure class="post-thumb">
 				    <img src="images/resource/post-thumb-2.jpg" alt="">
-				    <!--Curve Box-->
+
 				    <div class="curve-box">
 					  <div class="left-curve"></div>
 					  <div class="right-curve"></div>
-				    </div><!--Curve Box-->
+				    </div>
 				</figure>
 				<div class="text-content">
 				  <h4><a href="#">Claritas est etiam processus dynamicus</a></h4>
@@ -54,3 +50,4 @@
 	  </div>
     </div>
 </section>
+Latest News-->
