--- a/_includes/_quicklinks.html
+++ b/_includes/_quicklinks.html
@@ -3,17 +3,8 @@
 		<!-- Top Left -->
 		<div class="top-left">
 			<ul class="clearfix">
-				<li><a href="#">{{ site.title }}</a></li>
+				<li>{{ site.title }}</li>
 			</ul>
  		</div>
-
-		<div class="top-right">
-			<ul class="clearfix">
-				<li><a href="#">sitemap</a></li>
-				<li><a href="#">quick links</a></li>
-				<li><a href="#">support</a></li>
-				<li><a class="search-box-btn" href="#"><span class="fa fa-search"></span></a></li>
-			</ul>
-		</div>
 	</div>
 </div>
