--- a/_includes/_skills.html
+++ b/_includes/_skills.html
@@ -3,9 +3,9 @@
   <div class="auto-container">
 	  <!--Section Title-->
 	  <div class="sec-title text-center">
-		  <h2><span class="theme_color">Experienta</span> noastra</h2>
+		  <h2><span class="theme_color">Servicii</span> prestate</h2>
 		<div class="text">
-			
+
 		</div>
 	  </div>
 
@@ -15,11 +15,10 @@
 		<!--Buttons-->
 		<div class="buttons-style-one">
 		    <ul class="tab-buttons clearfix">
-			  <li class="tab-btn active-btn" data-tab="#tab-one"><span class="icon flaticon-tool-8"></span> <span class="txt">renovation</span></li>
-			  <li class="tab-btn" data-tab="#tab-two"><span class="icon flaticon-tool-10"></span> <span class="txt">architect</span></li>
-			  <li class="tab-btn" data-tab="#tab-three"><span class="icon flaticon-signs"></span> <span class="txt">Roofing</span></li>
-			  <li class="tab-btn" data-tab="#tab-four"><span class="icon flaticon-paint"></span> <span class="txt">Painting</span></li>
-			  <li class="tab-btn" data-tab="#tab-five"><span class="icon flaticon-tool-3"></span> <span class="txt">Plumbing</span></li>
+			  <li class="tab-btn active-btn" data-tab="#tab-one"><span class="icon flaticon-tool-8"></span> <span class="txt">sanitare</span></li>
+			  <li class="tab-btn" data-tab="#tab-two"><span class="icon flaticon-tool-10"></span> <span class="txt">termice</span></li>
+			  <li class="tab-btn" data-tab="#tab-three"><span class="icon flaticon-signs"></span> <span class="txt">canalizare</span></li>
+			  <li class="tab-btn" data-tab="#tab-four"><span class="icon flaticon-paint"></span> <span class="txt">solare</span></li>
 		    </ul>
 		</div>
 
@@ -44,9 +43,9 @@
 					  <div class="inner-content">
 
 						  <div class="content-area">
-						  <h3>Renovation services</h3>
+						  <h3>Instalatii sanitare</h3>
 						    <div class="text">
-							  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nstrud exercitation ullamco laboris nisi ut aliquip</p>
+							  <p>Cu o vasta experienta in domeniul instalatiilor sanitare va garantam o calitate superioare a serviciilor prestate</p>
 						    </div>
 
 						    <div class="progress-boxes">
@@ -54,23 +53,16 @@
 							  <!--Progress Box-->
 							  <div class="progress-box">
 								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:80%;"></div>
-								    <div class="txt">Skill 1</div>
-							      </div>
-							  </div>
-							  <!--Progress Box-->
-							  <div class="progress-box">
-								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:60%;"></div>
-								    <div class="txt">Skill 2</div>
+								  <div class="bar-bg" style="width:100%;"></div>
+								    <div class="txt">Servicii de consultanta instalatii sanitare</div>
 							      </div>
 							  </div>
 
 							  <!--Progress Box-->
 							  <div class="progress-box">
 								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:70%;"></div>
-								    <div class="txt">Skill 3</div>
+								  <div class="bar-bg" style="width:100%;"></div>
+								    <div class="txt">Echipare completa baie si bucatarie</div>
 							      </div>
 							  </div>
 
@@ -83,12 +75,12 @@
 				    <!--How Works Box-->
 				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
 					  <div class="inner-content">
-						  <h3>How it works</h3>
+						  <h3>Cum lucram</h3>
 
 						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">field</span>analysis</li>
-						    <li><span class="count">2</span><span class="small-text">condition</span>experiment</li>
-						    <li><span class="count">3</span><span class="small-text">Final</span>output</li>
+						  <li><span class="count">1</span><span class="small-text">&nbsp;</span>analiza</li>
+						    <li><span class="count">2</span><span class="small-text">&nbsp;</span>consultanta</li>
+						    <li><span class="count">3</span><span class="small-text">&nbsp;</span>executie</li>
 						</ul>
 
 					  </div>
@@ -116,7 +108,7 @@
 					  <div class="inner-content">
 
 						  <div class="content-area">
-						  <h3>Architect services</h3>
+						  <h3>Instalatii termice</h3>
 						    <div class="text">
 							  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nstrud exercitation ullamco laboris nisi ut aliquip</p>
 						    </div>
@@ -126,23 +118,23 @@
 							  <!--Progress Box-->
 							  <div class="progress-box">
 								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:80%;"></div>
-								    <div class="txt">Skill 1</div>
+								  <div class="bar-bg" style="width:100%;"></div>
+								    <div class="txt">Sisteme de incalzire prin radiatoare</div>
 							      </div>
 							  </div>
 							  <!--Progress Box-->
 							  <div class="progress-box">
 								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:60%;"></div>
-								    <div class="txt">Skill 2</div>
+								  <div class="bar-bg" style="width:100%;"></div>
+								    <div class="txt">Sisteme de incalzire prin pardoseala</div>
 							      </div>
 							  </div>
 
 							  <!--Progress Box-->
 							  <div class="progress-box">
 								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:70%;"></div>
-								    <div class="txt">Skill 3</div>
+								  <div class="bar-bg" style="width:80%;"></div>
+								    <div class="txt">Sisteme de incalzire prin ventiloconvectoare</div>
 							      </div>
 							  </div>
 
@@ -155,12 +147,12 @@
 				    <!--How Works Box-->
 				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
 					  <div class="inner-content">
-						  <h3>How it works</h3>
+						  <h3>Cum lucram</h3>
 
 						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">field</span>analysis</li>
-						    <li><span class="count">2</span><span class="small-text">condition</span>experiment</li>
-						    <li><span class="count">3</span><span class="small-text">Final</span>output</li>
+						  <li><span class="count">1</span><span class="small-text">&nbsp;</span>analiza</li>
+						    <li><span class="count">2</span><span class="small-text">&nbsp;</span>consultanta</li>
+						    <li><span class="count">3</span><span class="small-text">&nbsp;</span>executie</li>
 						</ul>
 
 					  </div>
@@ -188,7 +180,7 @@
 					  <div class="inner-content">
 
 						  <div class="content-area">
-						  <h3>Roofing services</h3>
+						  <h3>Instalatii canalizare</h3>
 						    <div class="text">
 							  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nstrud exercitation ullamco laboris nisi ut aliquip</p>
 						    </div>
@@ -198,23 +190,15 @@
 							  <!--Progress Box-->
 							  <div class="progress-box">
 								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:80%;"></div>
-								    <div class="txt">Skill 1</div>
+								  <div class="bar-bg" style="width:100%;"></div>
+								    <div class="txt">Exterioare</div>
 							      </div>
 							  </div>
 							  <!--Progress Box-->
 							  <div class="progress-box">
 								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:60%;"></div>
-								    <div class="txt">Skill 2</div>
-							      </div>
-							  </div>
-
-							  <!--Progress Box-->
-							  <div class="progress-box">
-								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:70%;"></div>
-								    <div class="txt">Skill 3</div>
+								  <div class="bar-bg" style="width:100%;"></div>
+								    <div class="txt">Interioare</div>
 							      </div>
 							  </div>
 
@@ -227,12 +211,12 @@
 				    <!--How Works Box-->
 				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
 					  <div class="inner-content">
-						  <h3>How it works</h3>
+						  <h3>Cum lucram</h3>
 
 						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">field</span>analysis</li>
-						    <li><span class="count">2</span><span class="small-text">condition</span>experiment</li>
-						    <li><span class="count">3</span><span class="small-text">Final</span>output</li>
+						  <li><span class="count">1</span><span class="small-text">&nbsp;</span>analiza</li>
+						    <li><span class="count">2</span><span class="small-text">&nbsp;</span>consultanta</li>
+						    <li><span class="count">3</span><span class="small-text">&nbsp;</span>executie</li>
 						</ul>
 
 					  </div>
@@ -260,35 +244,27 @@
 					  <div class="inner-content">
 
 						  <div class="content-area">
-						  <h3>Painting services</h3>
+						  <h3>Panouri solare</h3>
 						    <div class="text">
 							  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nstrud exercitation ullamco laboris nisi ut aliquip</p>
 						    </div>
 
 						    <div class="progress-boxes">
-
 							  <!--Progress Box-->
 							  <div class="progress-box">
 								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:80%;"></div>
-								    <div class="txt">Skill 1</div>
-							      </div>
-							  </div>
-							  <!--Progress Box-->
-							  <div class="progress-box">
-								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:60%;"></div>
-								    <div class="txt">Skill 2</div>
+								  <div class="bar-bg" style="width:99%;"></div>
+								    <div class="txt">Incalzire apa calda menajera</div>
 							      </div>
 							  </div>
 
-							  <!--Progress Box-->
-							  <div class="progress-box">
-								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:70%;"></div>
-								    <div class="txt">Skill 3</div>
-							      </div>
-							  </div>
+    							  <!--Progress Box-->
+    							  <div class="progress-box">
+    								  <div class="bar-outer">
+    								  <div class="bar-bg" style="width:100%;"></div>
+    								    <div class="txt">Incalzire piscine</div>
+    							      </div>
+    							  </div>
 
 						    </div>
 
@@ -299,12 +275,12 @@
 				    <!--How Works Box-->
 				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
 					  <div class="inner-content">
-						  <h3>How it works</h3>
+						  <h3>Cum lucram</h3>
 
 						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">field</span>analysis</li>
-						    <li><span class="count">2</span><span class="small-text">condition</span>experiment</li>
-						    <li><span class="count">3</span><span class="small-text">Final</span>output</li>
+						  <li><span class="count">1</span><span class="small-text">&nbsp;</span>analiza</li>
+						    <li><span class="count">2</span><span class="small-text">&nbsp;</span>consultanta</li>
+						    <li><span class="count">3</span><span class="small-text">&nbsp;</span>executie</li>
 						</ul>
 
 					  </div>
@@ -314,77 +290,6 @@
 			  </div><!--Outer-->
 		    </div><!--Tab-->
 
-		    <!--Tab-->
-		    <div class="tab" id="tab-five">
-			  <!--Outer-->
-			  <div class="outer">
-				  <div class="clearfix">
-				    <!--Left Image Box-->
-				    <div class="left-image-box col-lg-4 col-md-4 col-sm-4 col-xs-12">
-					  <div class="image-outer">
-						  <figure class="image"><img src="images/resource/featured-image-4.jpg" alt=""></figure>
-						<div class="upper-curve"></div>
-						  <div class="lower-curve"></div>
-					  </div>
-				    </div>
-				    <!--Main Content Box-->
-				    <div class="main-content-box col-lg-5 col-md-8 col-sm-8 col-xs-12">
-					  <div class="inner-content">
-
-						  <div class="content-area">
-						  <h3>Plumbing services</h3>
-						    <div class="text">
-							  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nstrud exercitation ullamco laboris nisi ut aliquip</p>
-						    </div>
-
-						    <div class="progress-boxes">
-
-							  <!--Progress Box-->
-							  <div class="progress-box">
-								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:80%;"></div>
-								    <div class="txt">Skill 1</div>
-							      </div>
-							  </div>
-							  <!--Progress Box-->
-							  <div class="progress-box">
-								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:60%;"></div>
-								    <div class="txt">Skill 2</div>
-							      </div>
-							  </div>
-
-							  <!--Progress Box-->
-							  <div class="progress-box">
-								  <div class="bar-outer">
-								  <div class="bar-bg" style="width:70%;"></div>
-								    <div class="txt">Skill 3</div>
-							      </div>
-							  </div>
-
-						    </div>
-
-						</div>
-					  </div>
-				    </div>
-
-				    <!--How Works Box-->
-				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
-					  <div class="inner-content">
-						  <h3>How it works</h3>
-
-						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">field</span>analysis</li>
-						    <li><span class="count">2</span><span class="small-text">condition</span>experiment</li>
-						    <li><span class="count">3</span><span class="small-text">Final</span>output</li>
-						</ul>
-
-					  </div>
-				    </div>
-				</div>
-
-			  </div><!--Outer-->
-		    </div><!--Tab-->
 
 		</div><!--Tabs Content-->
 
