--- a/_includes/_sponsors.html
+++ b/_includes/_sponsors.html
@@ -1,9 +1,7 @@
-<!--Sponsors Section-->
+<!--S
 <section class="sponsors-section padd-top-20">
   <div class="auto-container">
-	  <!--Sponsors Carousel-->
 	  <div class="sponsors-outer">
-		<!--Sponsors Carousel-->
 		<ul class="sponsors-carousel">
 		    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/1.jpg" alt=""></a></figure></li>
 		    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/2.jpg" alt=""></a></figure></li>
@@ -15,3 +13,4 @@
 	  </div>
     </div>
 </section>
+ponsors Section-->
