--- a/_includes/_testimonials.html
+++ b/_includes/_testimonials.html
@@ -1,7 +1,6 @@
-<!--Testimonials Sction-->
+<!--
 <section class="testimonials-section padd-bott-70">
   <div class="auto-container">
-	  <!--Section Title-->
 	  <div class="sec-title text-center">
 		  <h2>What <span class="theme_color">Our CLients</span> Say</h2>
 		<div class="text">Claritas est etiam processus dynamicus, qui sequitur <br>mutationem consuetudium lectorum.</div>
@@ -11,15 +10,13 @@
 
     <div class="carousel-outer">
 	  <div class="auto-container">
-		  <!--Testimonials Carousel-->
 		<ul class="testimonials-carousel">
 
-		    <!--Slide Item-->
 		    <li class="slide-item">
 			  <div class="testi-box clearfix">
 				<figure class="author-thumb">
 				    <img src="images/resource/author-thumb-1.jpg" alt="">
-				    <!--Info Box-->
+
 				    <div class="info-box">
 					  <div class="left-curve"></div>
 					  <div class="right-curve"></div>
@@ -27,18 +24,17 @@
 						<h4>jenny duren</h4>
 						<div class="designation">Housewife</div>
 					  </div>
-				    </div><!--Info Box-->
+				    </div>
 				</figure>
 				<div class="text-content">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</div>
 			  </div>
 		    </li>
 
-		    <!--Slide Item-->
 		    <li class="slide-item">
 			  <div class="testi-box clearfix">
 				<figure class="author-thumb">
 				    <img src="images/resource/author-thumb-2.jpg" alt="">
-				    <!--Info Box-->
+
 				    <div class="info-box">
 					  <div class="left-curve"></div>
 					  <div class="right-curve"></div>
@@ -46,18 +42,16 @@
 						<h4>James martin</h4>
 						<div class="designation">Banker</div>
 					  </div>
-				    </div><!--Info Box-->
+				    </div>
 				</figure>
 				<div class="text-content">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</div>
 			  </div>
 		    </li>
 
-		    <!--Slide Item-->
 		    <li class="slide-item">
 			  <div class="testi-box clearfix">
 				<figure class="author-thumb">
 				    <img src="images/resource/author-thumb-1.jpg" alt="">
-				    <!--Info Box-->
 				    <div class="info-box">
 					  <div class="left-curve"></div>
 					  <div class="right-curve"></div>
@@ -65,18 +59,16 @@
 						<h4>jenny duren</h4>
 						<div class="designation">Housewife</div>
 					  </div>
-				    </div><!--Info Box-->
+				    </div>
 				</figure>
 				<div class="text-content">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</div>
 			  </div>
 		    </li>
 
-		    <!--Slide Item-->
 		    <li class="slide-item">
 			  <div class="testi-box clearfix">
 				<figure class="author-thumb">
 				    <img src="images/resource/author-thumb-2.jpg" alt="">
-				    <!--Info Box-->
 				    <div class="info-box">
 					  <div class="left-curve"></div>
 					  <div class="right-curve"></div>
@@ -84,16 +76,16 @@
 						<h4>James martin</h4>
 						<div class="designation">Banker</div>
 					  </div>
-				    </div><!--Info Box-->
 				</figure>
 				<div class="text-content">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</div>
 			  </div>
 		    </li>
 
 
-		</ul><!--Testimonials Carousel-->
+		</ul>
 
 	  </div>
     </div>
 
 </section>
+Testimonials Sction-->
