--- a/_includes/_projects_carousel.html
+++ b/_includes/_projects_carousel.html
@@ -18,8 +18,8 @@
 				<a href="images/gallery/1.jpg" class="lightbox-image overlay-link"><span class="icon flaticon-cross"></span></a>
 				<div class="caption-layer">
 				  <div class="upper">
-					  <h3><a href="#">Roofing works</a></h3>
-					  <div class="category"><a href="#">Pre Work</a></div>
+					  <h3><a href="#">Cabina de dus cu rigola</a></h3>
+					  <div class="category"><a href="#">Sanitare</a></div>
 				    </div>
 				    <ul class="options clearfix">
 					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
@@ -38,8 +38,8 @@
 				<a href="images/gallery/1.jpg" class="lightbox-image overlay-link"><span class="icon flaticon-cross"></span></a>
 				<div class="caption-layer">
 				  <div class="upper">
-					  <h3><a href="#">Wood Making</a></h3>
-					  <div class="category"><a href="#">Pre Work</a></div>
+					  <h3><a href="#">WC &amp; bideu incastrat</a></h3>
+					  <div class="category"><a href="#">Sanitare</a></div>
 				    </div>
 				    <ul class="options clearfix">
 					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
@@ -58,8 +58,8 @@
 				<a href="images/gallery/1.jpg" class="lightbox-image overlay-link"><span class="icon flaticon-cross"></span></a>
 				<div class="caption-layer">
 				  <div class="upper">
-					  <h3><a href="#">Roofing works</a></h3>
-					  <div class="category"><a href="#">Pre Work</a></div>
+					  <h3><a href="#">Legatura centrala</a></h3>
+					  <div class="category"><a href="#">Termice</a></div>
 				    </div>
 				    <ul class="options clearfix">
 					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
@@ -78,8 +78,8 @@
 				<a href="images/gallery/1.jpg" class="lightbox-image overlay-link"><span class="icon flaticon-cross"></span></a>
 				<div class="caption-layer">
 				  <div class="upper">
-					  <h3><a href="#">Construction</a></h3>
-					  <div class="category"><a href="#">Pre Work</a></div>
+					  <h3><a href="#">Automatizare incalzire pardoseala</a></h3>
+					  <div class="category"><a href="#">Termice</a></div>
 				    </div>
 				    <ul class="options clearfix">
 					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
@@ -94,32 +94,12 @@
 		<li class="slide-item">
 		  <div class="default-work-column">
 			  <div class="inner-box">
-				  <figure class="image-box"><img src="images/gallery/3.jpg" alt=""></figure>
+				  <figure class="image-box"><img src="images/gallery/5.jpg" alt=""></figure>
 				<a href="images/gallery/1.jpg" class="lightbox-image overlay-link"><span class="icon flaticon-cross"></span></a>
 				<div class="caption-layer">
 				  <div class="upper">
-					  <h3><a href="#">Roofing works</a></h3>
-					  <div class="category"><a href="#">Pre Work</a></div>
-				    </div>
-				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
-					  <li><a href="#"><span class="icon flaticon-vehicle"></span> Duration: 2 months</a></li>
-				    </ul>
-				</div>
-			  </div>
-		    </div>
-		</li>
-
-		<!--Slide Item-->
-		<li class="slide-item">
-		  <div class="default-work-column">
-			  <div class="inner-box">
-				  <figure class="image-box"><img src="images/gallery/4.jpg" alt=""></figure>
-				<a href="images/gallery/1.jpg" class="lightbox-image overlay-link"><span class="icon flaticon-cross"></span></a>
-				<div class="caption-layer">
-				  <div class="upper">
-					  <h3><a href="#">Construction</a></h3>
-					  <div class="category"><a href="#">Pre Work</a></div>
+					  <h3><a href="#">Dedurizator &amp; statie epurare</a></h3>
+					  <div class="category"><a href="#">Sanitare</a></div>
 				    </div>
 				    <ul class="options clearfix">
 					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
@@ -132,7 +112,4 @@
 
 	  </ul>
     </div>
-
-    <div class="text-center"><a href="#" class="more-link">See more works</a></div>
-
 </section>
