--- a/_includes/homepage/_services.html
+++ b/_includes/homepage/_services.html
@@ -2,13 +2,13 @@
   <div class="auto-container">
 	  <!--Section Title-->
 	  <div class="sec-title text-center">
-		  <h2>Despre <span class="theme_color">quick-install</span></h2>
+		  <h2><span class="theme_color">quick-install</span></h2>
 	  </div>
 
 	  <div class="row clearfix">
 
 	  <!--Default Service Column-->
-	  <div class="default-service-column col-md-4 col-sm-6 col-xs-12">
+	  <div class="default-service-column col-md-3 col-sm-6 col-xs-12">
 	    <div class="inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 		    <div class="inner-most">
 			    <figure class="image-box"><a href="#"><img src="images/resource/featured-image-3.jpg" alt=""></a></figure>
@@ -17,8 +17,10 @@
 				<div class="right-curve"></div>
 
 			    <div class="content">
-				    <h3>Cine suntem</h3>
-				    <div class="text">Zs&L Quick Instal SRL este o firmă de prestări servicii în domeniul instalaţiilor sanitare, de încălzire şi de aer condiţionat. Serviciile noastre se adresează segmentului rezidențial,comercial.<br/><br/><br/></div>
+				    <h3>Instalatii sanitare</h3>
+				    <div class="text">
+
+				    </div>
 				</div>
 			  </div>
 		    </div>
@@ -27,7 +29,7 @@
 
 
 		  <!--Default Service Column-->
-		<div class="default-service-column col-md-4 col-sm-6 col-xs-12">
+		<div class="default-service-column col-md-3 col-sm-6 col-xs-12">
 		  <div class="inner-box wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
 			  <div class="inner-most">
 				  <figure class="image-box"><a href="#"><img src="images/resource/featured-image-1.jpg" alt=""></a></figure>
@@ -36,11 +38,9 @@
 				    <div class="right-curve"></div>
 
 				  <div class="content">
-					  <h3>Cui ne adresam</h3>
+					  <h3>Instalatii termice</h3>
 					  <div class="text">
-						  Compania Zs&amp;L Quick Instal are ca obiectiv de activitate executia si proiectarea lucrărilor de insatalatii.
-						  Datorită personalului experimentat si  a echipamentelor  moderne utilizate, lucrările noastre sunt realizate
-						  la standarde de calitate si sigurantă conform normelor europene.
+
 					  </div>
 				    </div>
 				</div>
@@ -49,7 +49,7 @@
 		</div>
 
 		<!--Default Service Column-->
-		<div class="default-service-column col-md-4 col-sm-6 col-xs-12">
+		<div class="default-service-column col-md-3 col-sm-6 col-xs-12">
 		  <div class="inner-box wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
 			  <div class="inner-most">
 				  <figure class="image-box"><a href="#"><img src="images/resource/featured-image-2.jpg" alt=""></a></figure>
@@ -58,11 +58,29 @@
 				    <div class="right-curve"></div>
 
 				  <div class="content">
-					  <h3>Misiune</h3>
+					  <h3>Instalalatii canalizare</h3>
 					  <div class="text">
-						  Misiunea noastă este să răspundem provocărilor multiple pe care le întâlnim pe pacursul activității noastre,
-						  cu cele mai potrivite soluții, menite să satisfacă fiecare client. Suntem felxibili atât în ceea ce priveşte
-						  variantele lucrărilor cât şi momentul începerii și durata executării acestora.
+
+					  </div>
+				    </div>
+				</div>
+			  </div>
+		    </div>
+		</div>
+
+		<!--Default Service Column-->
+		<div class="default-service-column col-md-3 col-sm-6 col-xs-12">
+		  <div class="inner-box wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
+			  <div class="inner-most">
+				  <figure class="image-box"><a href="#"><img src="images/resource/featured-image-41.jpg" alt=""></a></figure>
+				<div class="lower-part">
+				  <div class="left-curve"></div>
+				    <div class="right-curve"></div>
+
+				  <div class="content">
+					  <h3>Panouri solare</h3>
+					  <div class="text">
+
 					  </div>
 				    </div>
 				</div>
