--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -23,14 +23,14 @@
 				<div class="col-lg-6 col-sm-6 col-xs-12 column">
 				    <div class="footer-widget links-widget">
 
-								  <h3>Important Links</h3>
-					  <ul>
+					<h3>Important Links</h3>
+					<ul>
 						<li><a href="#">Themeforest</a></li>
 						<li><a href="#">Videohive</a></li>
 						<li><a href="#">Graphicriver</a></li>
 						<li><a href="#">Audio Jungle</a></li>
 						<li><a href="#">Photodune</a></li>
-					  </ul>
+					</ul>
 
 				    </div>
 				</div>
@@ -88,8 +88,7 @@
     <div class="footer-bottom">
 	  <div class="auto-container">
 		<div class="row clearfix">
-		    <div class="pull-left"><div class="copyright-text">&copy; Copyright 2016 Contractor One, All Rights Reserved</div></div>
-		    <div class="pull-right"><div class="info-text">Designed and &ensp;<span class="fa fa-heart theme_color"></span>&ensp; by <a target="_blank" href="http://themeforest.net/user/themexriver/">Themexriver</a></div></div>
+		    <div class="pull-left"><div class="copyright-text">&copy; Copyright 2016 quick-install.ro</div></div>
 		</div>
 	  </div>
     </div>
