--- a/_includes/_projects_carousel.html
+++ b/_includes/_projects_carousel.html
@@ -3,8 +3,8 @@
   <div class="auto-container">
 	  <!--Section Title-->
 	  <div class="sec-title text-center">
-		  <h2>Latest <span class="theme_color">Works</span></h2>
-		<div class="text">Claritas est etiam processus dynamicus, qui sequitur <br>mutationem consuetudium lectorum.</div>
+		  <h2>Exemple <span class="theme_color">PRoiecte</span></h2>
+		<div class="text">&nbsp;</div>
 	  </div>
     </div>
 
