--- a/_includes/_skills.html
+++ b/_includes/_skills.html
@@ -45,7 +45,7 @@
 						  <div class="content-area">
 						  <h3>Instalatii sanitare</h3>
 						    <div class="text">
-							  <p>Cu o vasta experienta in domeniul instalatiilor sanitare va garantam o calitate superioare a serviciilor prestate</p>
+							  <p>Montând instalaţiile de încălzire dorim să vă fie asigurată temperatura optimă în toate încăperile(locuinţei).</p>
 						    </div>
 
 						    <div class="progress-boxes">
@@ -74,16 +74,7 @@
 
 				    <!--How Works Box-->
 				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
-					  <div class="inner-content">
-						  <h3>Cum lucram</h3>
-
-						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">&nbsp;</span>analiza</li>
-						    <li><span class="count">2</span><span class="small-text">&nbsp;</span>consultanta</li>
-						    <li><span class="count">3</span><span class="small-text">&nbsp;</span>executie</li>
-						</ul>
-
-					  </div>
+					{% include partials/_skills_steps.html %}
 				    </div>
 				</div>
 
@@ -98,7 +89,7 @@
 				    <!--Left Image Box-->
 				    <div class="left-image-box col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					  <div class="image-outer">
-						  <figure class="image"><img src="images/resource/featured-image-4.jpg" alt=""></figure>
+						  <figure class="image"><img src="images/resource/featured-image-101.jpg" alt=""></figure>
 						<div class="upper-curve"></div>
 						  <div class="lower-curve"></div>
 					  </div>
@@ -146,16 +137,7 @@
 
 				    <!--How Works Box-->
 				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
-					  <div class="inner-content">
-						  <h3>Cum lucram</h3>
-
-						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">&nbsp;</span>analiza</li>
-						    <li><span class="count">2</span><span class="small-text">&nbsp;</span>consultanta</li>
-						    <li><span class="count">3</span><span class="small-text">&nbsp;</span>executie</li>
-						</ul>
-
-					  </div>
+					{% include partials/_skills_steps.html %}
 				    </div>
 				</div>
 
@@ -170,7 +152,7 @@
 				    <!--Left Image Box-->
 				    <div class="left-image-box col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					  <div class="image-outer">
-						  <figure class="image"><img src="images/resource/featured-image-4.jpg" alt=""></figure>
+						  <figure class="image"><img src="images/resource/featured-image-102.jpg" alt=""></figure>
 						<div class="upper-curve"></div>
 						  <div class="lower-curve"></div>
 					  </div>
@@ -182,7 +164,7 @@
 						  <div class="content-area">
 						  <h3>Instalatii canalizare</h3>
 						    <div class="text">
-							  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nstrud exercitation ullamco laboris nisi ut aliquip</p>
+							  <p>Având o bogată experienţă în lucrările de canalizare, vă oferim o gamă variată de servicii şi în acest domeniu.</p>
 						    </div>
 
 						    <div class="progress-boxes">
@@ -210,16 +192,7 @@
 
 				    <!--How Works Box-->
 				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
-					  <div class="inner-content">
-						  <h3>Cum lucram</h3>
-
-						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">&nbsp;</span>analiza</li>
-						    <li><span class="count">2</span><span class="small-text">&nbsp;</span>consultanta</li>
-						    <li><span class="count">3</span><span class="small-text">&nbsp;</span>executie</li>
-						</ul>
-
-					  </div>
+					{% include partials/_skills_steps.html %}
 				    </div>
 				</div>
 
@@ -234,7 +207,7 @@
 				    <!--Left Image Box-->
 				    <div class="left-image-box col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					  <div class="image-outer">
-						  <figure class="image"><img src="images/resource/featured-image-4.jpg" alt=""></figure>
+						  <figure class="image"><img src="images/resource/featured-image-103.jpg" alt=""></figure>
 						<div class="upper-curve"></div>
 						  <div class="lower-curve"></div>
 					  </div>
@@ -246,7 +219,7 @@
 						  <div class="content-area">
 						  <h3>Panouri solare</h3>
 						    <div class="text">
-							  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nstrud exercitation ullamco laboris nisi ut aliquip</p>
+							  <p>Pe lângă consultanţa în alegerea sistemului potrivit, ne ocupăm şi de executarea montajului şi punerea în funcţiune a panourilor(solare).</p>
 						    </div>
 
 						    <div class="progress-boxes">
@@ -274,16 +247,7 @@
 
 				    <!--How Works Box-->
 				    <div class="how-works-box col-lg-3 col-md-12 col-sm-12 col-xs-12">
-					  <div class="inner-content">
-						  <h3>Cum lucram</h3>
-
-						<ul class="styled-steps">
-						  <li><span class="count">1</span><span class="small-text">&nbsp;</span>analiza</li>
-						    <li><span class="count">2</span><span class="small-text">&nbsp;</span>consultanta</li>
-						    <li><span class="count">3</span><span class="small-text">&nbsp;</span>executie</li>
-						</ul>
-
-					  </div>
+					{% include partials/_skills_steps.html %}
 				    </div>
 				</div>
 
