--- a/_includes/_team.html
+++ b/_includes/_team.html
@@ -1,10 +1,9 @@
 <!--Team Section-->
-<section class="team-section" style="background-image:url(images/background/image-3.jpg);">
+<section class="team-section">
   <div class="auto-container">
 	  <!--Section Title-->
 	  <div class="sec-title text-center">
-		  <h2>Awesome <span class="theme_color">Team</span></h2>
-		<div class="text">Claritas est etiam processus dynamicus, qui sequitur <br>mutationem consuetudium lectorum.</div>
+		  <h2>Echipa <span class="theme_color">tanara</span>, <span class="theme_color">dinamica</span> si <span class="theme_color">motivata</span></h2>
 	  </div>
 
 	  <div class="row clearfix">
