--- a/_includes/_projects_carousel.html
+++ b/_includes/_projects_carousel.html
@@ -112,4 +112,6 @@
 
 	  </ul>
     </div>
+
+    <div class="text-center"><a href="/gallery.html" class="more-link">See more works</a></div>
 </section>
