--- a/_includes/_projects_carousel.html
+++ b/_includes/_projects_carousel.html
@@ -113,5 +113,5 @@
 	  </ul>
     </div>
 
-    <div class="text-center"><a href="/gallery.html" class="more-link">See more works</a></div>
+    <div class="text-center"><a href="/gallery.html" class="more-link">Galerie</a></div>
 </section>
